--- a/src/css/stylesheet-fixes.css
+++ b/src/css/stylesheet-fixes.css
@@ -109,7 +109,7 @@ section {
       position: absolute;
       display: inline-block;
       right: -10px;
-      content: "|";
+      content: '|';
       color: #ccc;
       margin: 0 5px;
       /* opacity: 0.5; */
@@ -151,10 +151,8 @@ section {
 /* Misc */
 .text-label {
   font-weight: bold;
-  opacity: .5;
+  opacity: 0.5;
 }
 .table-responsive {
   overflow: auto;
 }
-
-
